--- a/.env.example
+++ b/.env.example
@@ -11,15 +11,18 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL=""
 
 # Next Auth
 # You can generate a new secret on the command line with:
 # openssl rand -base64 32
 # https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
+NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+# Next Auth Azure Active Directory Provider
+# https://next-auth.js.org/providers/azure-ad
+# check the prisma schema for the user model if you are getting errors in Auth
+AZURE_AD_CLIENT_ID="e9312e6c-f0c7-4d49-9d90-ab2d7ea3751b"
+AZURE_AD_CLIENT_SECRET="pUz8Q~LF0I7m-TLn~gVnN3pY1mj8pvuaFOCincfZ"
+AZURE_AD_TENANT_ID="c65a3ea6-0f7c-400b-8934-5a6dc1705645"
