--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "formik": "^2.4.0",
     "next": "^13.4.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
