Added cards for items and prestamos

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ NEXTAUTH_URL="http://localhost:3000"
 AZURE_AD_CLIENT_ID=""
 AZURE_AD_CLIENT_SECRET=""
 AZURE_AD_TENANT_ID=""
+
+# Path to a default image to display in case an image can't be found
+NEXT_PUBLIC_DEFAULT_IMAGE=""
