--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.5.2",
+    "ws": "^8.18.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
