--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "@uploadthing/react": "^7.3.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
